--- a/css/styles.css
+++ b/css/styles.css
@@ -33,14 +33,34 @@ body {
 }
 
 footer {
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: fit-content;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   background-color: rgb(192, 185, 171);
+  
+
+}
+
+footer li {  
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-style: outset;
+}
+footer img{  
+  padding-left: 20px;
+  width: 50px;  
 }
 
 .menu {
   display: flex;
   justify-content: center;
   font-size: 25px;
-  background-image: url(/multimedia/20131103_191958.jpg);
+  background-image: url(../multimedia/20131103_191958.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -87,4 +107,13 @@ footer {
   font-size: 1.5rem;
 }
 
+.formulario {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /*# sourceMappingURL=styles.css.map */
